--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,1 @@
-muscleforgeproject/muscleforge/static/* linguist-vendored
+muscleforgeproject/muscleforge/static/muscleforge/* linguist-vendored=true
